--- a/public/app.html
+++ b/public/app.html
@@ -1,4 +1,9 @@
-<!Doctype html><html><head><script src="app.js"></script></head><body>
+<!Doctype html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0, maximum-scale=10">
+<link rel="stylesheet" href="styles.css" media="all" type="text/css">
+<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+<script src="app.js"></script>
+</head><body>
 
 hello world
 
